# transcribe-lifeoc

./: .env.example  Cargo.toml  README.md  audio
.github/workflows/: rust.yml
src/: downloader.rs  error.rs  main.rs  summarizer.rs  transcriber.rs
