[package]
name = "transcribe-lifeoc"
description = "Transcribes Life church's services."
version = "0.1.0"
edition = "2021"
authors = ["Aiden Hadisi"]
repository = "https://github.com/AidenHadisi/transcribe-lifeoc"
license = "MIT OR Apache-2.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-gpt-rs = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
rustube = "0.6.0"
hound = "3.5.0"
